fix build and clean

--- a/sdk/cpp/Makefile
+++ b/sdk/cpp/Makefile
@@ -12,4 +12,8 @@ build/HeliosDacAPI.o: shared_library/HeliosDacAPI.cpp
 	$(CXX) $(CPPFLAGS) $(INCLUDES) -c -o $@ $^
 
 build/libHeliosDacAPI.so: build/HeliosDac.o build/HeliosDacAPI.o
-	$(CXX) -shared -o $@ $^
+	$(CXX) -shared -o $@ $^ -lusb-1.0
+
+.PHONY : clean
+clean:
+	rm build/*.o build/*.so
